# Auto-Git-Changelog

./: .gitignore  README.md  pyproject.toml
auto_git_changelog/: __init__.py  changelog.py  main.py  version.py
scripts/: pre-commit.sh
