[tool.poetry]
name = "auto git changelog"
version = "0.1.0"
description = "Generates and manages an automatic changelog based on git commit messages mainly using python libraries."
authors = ["LukahConnollySams <lukahcsams@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jinja2 = "^3.1.4"
toml = "^0.10.2"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
